[tool.poetry]
name = "mps_tomo"
version = "0.1.0"
description = "Entry for Qiskit Camp Asia 2019"
license = "Apache-2.0"
authors = []
readme = "README.rst"
homepage = "https://github.com/qiskit-community/qiskit-camp-asia-19/issues/35"
repository = "https://github.com/AidanGG/mps_tomo"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
qiskit = "^0.13.0"
scipy = "^1.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.10-beta.0", allows-prereleases = true}
ipython = "^7.9"
pre-commit = "^1.20"
pylint = "^2.4"
pytest = "^5.2"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
